[package]
name = "rust-bear-cat"
version = "0.1.0"
authors = ["Casper Smet <casper.smet@gmail.com>", "Thijs van den Berg", "Stan Meyberg"]
edition = "2018"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
