[package]
name = "rust-bear-cat"
version = "0.1.0"
authors = ["Casper Smet <casper.smet@gmail.com>", "Thijs van den Berg", "Stan Meyberg"]
edition = "2018"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
itertools = "0.10.0"
rand = "0.8.2"
ndarray = "0.14.0"
ndarray-rand = "0.13.0"